<resources>
    <string name="app_name">Aurora</string>
    <string name="title_signup">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_signup">Create account</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register Account</string>
    <string name="btn_diet">Diet</string>
    <string name="btn_program">Program</string>
    <string name="btn_explore">Explore</string>
    <string name="title_setting">Setting</string>
    <string name="hint_search">Search</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_reject">Cancel</string>
    <string name="title_logout">Confirm logout?</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="setting_intro">Setting details</string>
    <string name="sports_name">Sports Name</string>
    <string name="second">Time (s)</string>
    <string name="btn_confirm">Confirm</string>
    <string name="time_0">00:00:00</string>
    <string name="post">POST</string>
    <string name="description">description</string>
    <string name="title_delete">Confirm delete?</string>
    <string name="btn_delete">Delete</string>
    <string name="diet_setting_intro">Setting diet details</string>
    <string name="food_name">Food</string>
    <string name="calories">calories</string>
</resources>