<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/setting">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_monday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@android:color/transparent"
                        android:text="@string/monday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_tuesday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_tuesday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/tuesday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_wednesday"
                        app:layout_constraintStart_toEndOf="@id/btn_monday"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_wednesday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/wednesday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_thursday"
                        app:layout_constraintStart_toEndOf="@id/btn_tuesday"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_thursday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/thursday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_friday"
                        app:layout_constraintStart_toEndOf="@id/btn_wednesday"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_friday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/friday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_saturday"
                        app:layout_constraintStart_toEndOf="@id/btn_thursday"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_saturday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/saturday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toStartOf="@+id/btn_sunday"
                        app:layout_constraintStart_toEndOf="@id/btn_friday"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_sunday"
                        style="@style/Widget.MaterialComponents.TimePicker.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:text="@string/sunday"
                        android:textColor="@color/gray_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_saturday"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" >

                <LinearLayout
                    android:id="@+id/program_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Button
                android:id="@+id/add_program"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/gray_semi_semi_dark"
                android:foreground="@android:drawable/ic_input_add"
                android:foregroundGravity="center"
                android:foregroundTint="@color/white"
                app:cornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>